fix checkbox alignment

--- a/frontend/src/pages/home/home.scss
+++ b/frontend/src/pages/home/home.scss
@@ -55,7 +55,7 @@
     }
 
     .checkbox {
-        align-items: center;
+        // align-items: center;
     }
 
     .searchbar {
