--- a/frontend/src/pages/menu/menu.scss
+++ b/frontend/src/pages/menu/menu.scss
@@ -69,7 +69,7 @@
     }
 
     .checkboxes {
-        align-items: center;
+        // align-items: center;
     }
     
     .contactInfo {
