--- a/frontend/src/pages/recommendations/recommendations.scss
+++ b/frontend/src/pages/recommendations/recommendations.scss
@@ -46,6 +46,6 @@
     }
 
     .checkbox {
-        align-items: center;
+        // align-items: center;
     }
 }
